<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="@color/test">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
   android:isScrollContainer="true">

    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/items_checkout"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

   
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_below="@+id/couponLinLay"
      
        android:id="@+id/cashLinLay">
        <Button
            android:id="@+id/cash"
            android:textColor="@android:color/white"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="cash_button"
            android:text="@string/cash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/couponLinLay"
        android:layout_below="@+id/items">
        
        <Button
            android:id="@+id/coupon"
                        android:textColor="@android:color/white"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="coupon_button"
            android:text="@string/coupons" />

        <TextView
            android:id="@+id/coupon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x0"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/junkLinLay"
                android:layout_below="@+id/items"
        
        android:layout_toRightOf="@+id/couponLinLay">
        
        
        

        <Button
            android:id="@+id/junk_food"
            android:textColor="@android:color/white"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="junk_food_button"
            android:text="@string/junk_food" />

        <TextView
            android:id="@+id/junk_food_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x0"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/discountLinLay"
                                android:layout_toRightOf="@+id/couponLinLay"
        
                        android:layout_below="@+id/junkLinLay">

    <Button
        android:id="@+id/discount_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="bargain_button"
        android:text="@string/bargain"
        android:textColor="@android:color/white" />

        </LinearLayout>
        
</RelativeLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clear_button"
        android:text="@string/clear"
        android:visibility="visible" />

    <TextView
        android:id="@+id/donation_food_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

<TextView
            android:id="@+id/dollarSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="33sp"
            android:text="@string/dollarSign"/>

<EditText
    android:id="@+id/donIn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="30"
    android:inputType="numberDecimal" 
    android:maxLength="7"
    android:minWidth="40dp"
    android:layout_toRightOf="@+id/dollarSign"
    android:windowSoftInputMode="stateHidden"
    android:text="0" />
</RelativeLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="44dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submit_button"
        android:text="@string/submit"
        android:visibility="visible" />
    
    </LinearLayout>
  
    </ScrollView>