<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="@color/test">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
        android:isScrollContainer= "true" >
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_price_sales"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/total_standard_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whole_fruit_sold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/wholefruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mixed_bags_sold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/mixedbags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smoothies_sold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/smoothies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView7point5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/granola_sold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/granolabars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
  <TableRow
            android:id="@+id/tableRow4point5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView6point5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/bargin_total"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/barginTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
         <TableRow
            android:id="@+id/tableRow4point7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView6point7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/dona_total"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/donaTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="25"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_transactions"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_sales"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/totalsales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:maxEms="5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="122dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:onClick="newTransaction"
        android:text="@string/start_new" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/finish_session"
        android:onClick="finishSession" />

</LinearLayout>

</ScrollView>