<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/test">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<TextView
            android:id="@+id/temp_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preliminary_financial_info" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_question" />
	<RelativeLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/dollarSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="33sp"
            android:text="@string/dollarSign"/>
    	<EditText
        	android:id="@+id/cashbox_starting"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/dollarSign"
        	android:ems="10"
            android:inputType="numberDecimal" >
    	</EditText>
    	<Button
                    android:id="@+id/moneyInPlus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    android:onClick="qtyClicked2"
                    android:layout_toRightOf="@id/cashbox_starting"
                     />
    	<Button
                    android:id="@+id/moneyInMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    android:layout_toRightOf="@id/moneyInPlus"
                    android:onClick="qtyClicked2" />
      <requestFocus />
	</RelativeLayout>
	 <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fruit_cost_question" />
	<RelativeLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/dollarSign2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="33sp"
            android:text="@string/dollarSign"/>
    	<EditText
        	android:id="@+id/fruitcost_starting"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/dollarSign2"
        	android:ems="10"
            android:inputType="numberDecimal" >
    	</EditText>
    	<Button
                    android:id="@+id/fruitCostPlus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    android:onClick="qtyClicked2"
                    android:layout_toRightOf="@id/fruitcost_starting"
                     />
    	<Button
                    android:id="@+id/fruitCostMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    android:layout_toRightOf="@id/fruitCostPlus"
                    android:onClick="qtyClicked2" />
	</RelativeLayout>
	 <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoothie_cost_question" />
	<RelativeLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/dollarSign3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="33sp"
            android:text="@string/dollarSign"/>
                  
    	<EditText
        	android:id="@+id/smoothie_cost_starting"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/dollarSign3"
        	android:ems="10"
            android:inputType="numberDecimal" >
    	</EditText>
    	<Button
                    android:id="@+id/smoothieCostPlus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    android:onClick="qtyClicked2"
                    android:layout_toRightOf="@id/smoothie_cost_starting"
                     />
    	<Button
                    android:id="@+id/smoothieCostMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    android:layout_toRightOf="@id/smoothieCostPlus"
                    android:onClick="qtyClicked2" />
	</RelativeLayout>
	 <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_cost_question" />
	<RelativeLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
        <TextView
            android:id="@+id/dollarSign5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textSize="33sp"
            android:text="@string/dollarSign"/>
                  
    	<EditText
        	android:id="@+id/other_cost_starting"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/dollarSign5"
        	android:ems="10"
            android:inputType="numberDecimal" >
    	</EditText>
    	 	<Button
                    android:id="@+id/otherCostPlus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    android:onClick="qtyClicked2"
                    android:layout_toRightOf="@id/other_cost_starting"
                     />
    	<Button
                    android:id="@+id/otherCostMinus"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    android:layout_toRightOf="@id/otherCostPlus"
                    android:onClick="qtyClicked2" />
	</RelativeLayout>
    	<Button
    	    android:id="@+id/continue_pre_sale_inputn"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:onClick="continueToPricing"
    	    android:gravity="center"
    	    android:text="@string/continue_text" />
</LinearLayout>
</ScrollView>